[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foxesscloud"
version = "2.7.7"
authors = [
  {name="Tony Matthews", email="tony@quasair.co.uk"},
]
description = "library for accessing Fox ESS cloud data using Open API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TonyM1958/FoxESS-Cloud"
"Bug Tracker" = "https://github.com/TonyM1958/FoxESS-Cloud/issues"
